--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MENYALA ABANGKUHH</title>
+    <title>Hello, World!</title>
 </head>
 <body>
-    <h1>MENYALA ABANGKUHH</h1>
+    <h1>Hello, World!</h1>
 </body>
 </html>
