--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, World!</title>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta name="robots" content="index, follow" />
+<meta name="googlebot" content="all" />
+<meta name="bingbot" content="all" />
+<meta name="yandexbot" content="all" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="mobile-web-app-capable" content="yes" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<link rel="canonical" href="https://toyota-info.github.io/jakarta/" />
+<link rel="alternate" href="https://toyota-info.github.io/jakarta/" hreflang="id-ID" /> 
+  <title>Index of /user</title>
+<link rel="shortcut icon" type="image/x-icon" href="https://ampharakiri.xyz/git/favicon-suhubet.png" />
+<link rel="apple-touch-icon" href="https://ampharakiri.xyz/git/favicon-suhubet.png" />
+<link rel="icon" type="image/x-icon" href="https://ampharakiri.xyz/git/favicon-suhubet.png" />
+<meta name="keywords" content="SUHUBET" />
+<meta name="categories" content="website" />
+<meta name="language" content="id-ID" />
+<meta name="rating" content="general" />
+<meta name="copyright" content="SUHUBET" />
+<meta name="author" content="SUHUBET" />
+<meta name="publisher" content="SUHUBET" />
+<meta name="distribution" content="global" />
+<meta name="geo.placename" content="Indonesia" />
+<meta name="geo.country" content="ID" />
+<meta name="geo.region" content="ID" />
+<meta name="tgn.nation" content="Indonesia" />
 </head>
-<body>
-    <h1>Hello, World!</h1>
-</body>
-</html>
+ <body>
+<h1>Index of /user</h1>
+  <table>
+   <tr><th valign="top"><img src="https://ampharakiri.xyz/img/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
+   <tr><th colspan="5"><hr></th></tr>
+<tr><td valign="top"><img src="https://ampharakiri.xyz/img/back.gif" alt="[PARENTDIR]"></td><td><a href="/">Parent Directory</a></td><td>&nbsp;</td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="https://ampharakiri.xyz/img/text.gif" alt="[TXT]"></td><td><a href="https://toyota-info.github.io/jakarta/Obeservasi-Rtp-Live-Mahjong.html">Obeservasi-Rtp-Live-Mahjong.html</a></td><td align="right">2025-03-06 16:43  </td><td align="right"> 27K</td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="https://ampharakiri.xyz/img/folder.gif" alt="[DIR]"></td><td><a href="reload/">reload/</a></td><td align="right">2025-03-10 16:40  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+
+<tr><th colspan="5"><hr></th></tr>
+
+</table>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'92113a6adb0d1085',t:'MTc0MjA5NjQxNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"92113a6adb0d1085","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.1.0","token":"45ebd6d265d144fc94213c19e043c47d"}' crossorigin="anonymous"></script>
+</body></html>
